# SMRmanager

./: .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: publish.yml  release.yml
public/registry/: plugins.json
src/: catalog.ts  day-night-toggle.ts  dom.ts  main.ts  state.ts  styles.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json  tauri.macos.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: detection.rs  installer.rs  lib.rs  main.rs  updates.rs
src/core/: api.ts  data.ts  toast.ts
src/styles/: 01-base.css  02-layout.css  03-components.css  04-pages.css  05-theme-dark.css  06-responsive.css
src/views/: settings.ts
